:bug: fix scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
+html {
+  line-height: normal;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
